--- a/_posts/2021-03-16-dataviz-makeover-3/dataviz-makeover-3.html
+++ b/_posts/2021-03-16-dataviz-makeover-3/dataviz-makeover-3.html
@@ -116,7 +116,7 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
   <!--/radix_placeholder_rmarkdown_metadata-->
   
   <script type="text/json" id="radix-resource-manifest">
-  {"type":"character","attributes":{},"value":["AlternativeDesign.jpg","base_visual.png","dataviz-makeover-3_files/anchor-4.2.2/anchor.min.js","dataviz-makeover-3_files/bowser-1.9.3/bowser.min.js","dataviz-makeover-3_files/distill-2.2.21/template.v2.js","dataviz-makeover-3_files/jquery-1.11.3/jquery.min.js","dataviz-makeover-3_files/popper-2.6.0/popper.min.js","dataviz-makeover-3_files/tippy-6.2.7/tippy-bundle.umd.min.js","dataviz-makeover-3_files/tippy-6.2.7/tippy-light-border.css","dataviz-makeover-3_files/tippy-6.2.7/tippy.css","dataviz-makeover-3_files/tippy-6.2.7/tippy.umd.min.js","dataviz-makeover-3_files/webcomponents-2.0.0/webcomponents.js","insight1a.png","insight1b.png","insight2a.png","insight2b.png","insight3a.png","insight3b.png","insight3c.png","insight4.png","insight5a.png","insight5b.png","Steps/Step1.png","Steps/Step10.png","Steps/Step11.png","Steps/Step12.png","Steps/Step13.png","Steps/Step14.png","Steps/Step15.png","Steps/Step16.png","Steps/Step17.png","Steps/Step18.png","Steps/Step2.png","Steps/Step20.png","Steps/Step21.png","Steps/Step22.png","Steps/Step23.png","Steps/Step24.png","Steps/Step25.png","Steps/Step26.png","Steps/Step27.png","Steps/Step28.png","Steps/Step29.png","Steps/Step3.png","Steps/Step30.png","Steps/Step31.png","Steps/Step32.png","Steps/Step33.png","Steps/Step34.png","Steps/Step35.png","Steps/Step36.png","Steps/Step37.png","Steps/Step38.png","Steps/Step39.png","Steps/Step4.png","Steps/Step40.png","Steps/Step41.png","Steps/Step42.png","Steps/Step43.png","Steps/Step44.png","Steps/Step45.png","Steps/Step46.png","Steps/Step47.png","Steps/Step48.png","Steps/Step49.png","Steps/Step5.png","Steps/Step50.png","Steps/Step51.png","Steps/Step52.png","Steps/Step53.png","Steps/Step54.png","Steps/Step55.png","Steps/Step6.png","Steps/Step7.png","Steps/Step8.png","Steps/Step9.png"]}
+  {"type":"character","attributes":{},"value":["AlternativeDesign.jpg","AlternativeDesign2.jpg","base_visual.png","data/Southeast-Asia_2010-2020_Oct31.xlsx","dataviz-makeover-3_files/anchor-4.2.2/anchor.min.js","dataviz-makeover-3_files/bowser-1.9.3/bowser.min.js","dataviz-makeover-3_files/distill-2.2.21/template.v2.js","dataviz-makeover-3_files/jquery-1.11.3/jquery.min.js","dataviz-makeover-3_files/popper-2.6.0/popper.min.js","dataviz-makeover-3_files/tippy-6.2.7/tippy-bundle.umd.min.js","dataviz-makeover-3_files/tippy-6.2.7/tippy-light-border.css","dataviz-makeover-3_files/tippy-6.2.7/tippy.css","dataviz-makeover-3_files/tippy-6.2.7/tippy.umd.min.js","dataviz-makeover-3_files/webcomponents-2.0.0/webcomponents.js","insight1a.png","insight1b.png","insight2a.png","insight2b.png","insight3a.png","insight3b.png","insight3c.png","insight4.png","insight5a.png","insight5b.png","Steps/Step1.png","Steps/Step10.png","Steps/Step11.png","Steps/Step12.png","Steps/Step13.png","Steps/Step14.png","Steps/Step15.png","Steps/Step16.png","Steps/Step17.png","Steps/Step18.png","Steps/Step2.png","Steps/Step20.png","Steps/Step21.png","Steps/Step22.png","Steps/Step23.png","Steps/Step24.png","Steps/Step25.png","Steps/Step26.png","Steps/Step27.png","Steps/Step28.png","Steps/Step29.png","Steps/Step3.png","Steps/Step30.png","Steps/Step31.png","Steps/Step32.png","Steps/Step33.png","Steps/Step34.png","Steps/Step35.png","Steps/Step36.png","Steps/Step37.png","Steps/Step38.png","Steps/Step39.png","Steps/Step4.png","Steps/Step40.png","Steps/Step41.png","Steps/Step42.png","Steps/Step43.png","Steps/Step44.png","Steps/Step45.png","Steps/Step46.png","Steps/Step47.png","Steps/Step48.png","Steps/Step49.png","Steps/Step5.png","Steps/Step50.png","Steps/Step51.png","Steps/Step52.png","Steps/Step53.png","Steps/Step54.png","Steps/Step55.png","Steps/Step56.png","Steps/Step57.png","Steps/Step58.png","Steps/Step59.png","Steps/Step6.png","Steps/Step60.png","Steps/Step7.png","Steps/Step8.png","Steps/Step9.png"]}
   </script>
   <!--radix_placeholder_navigation_in_header-->
   <!--/radix_placeholder_navigation_in_header-->
@@ -1492,11 +1492,11 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
 <li><a href="#proposed-visualisation">3.0 Proposed Visualisation</a></li>
 <li><a href="#step-by-step-guide">4.0 Step-by-Step Guide</a><ul>
 <li><a href="#data-preparation">4.1 Data Preparation</a></li>
-<li><a href="#heatmap">4.2 Heatmap</a></li>
-<li><a href="#pie-chart">4.3 Pie Chart</a></li>
-<li><a href="#trellis-maps">4.4 Trellis Maps</a></li>
-<li><a href="#detailed-map">4.5 Detailed Map</a></li>
-<li><a href="#line-chart">4.6 Line Chart</a></li>
+<li><a href="#pie-chart">4.2 Pie Chart</a></li>
+<li><a href="#trellis-maps">4.3 Trellis Maps</a></li>
+<li><a href="#detailed-map">4.4 Detailed Map</a></li>
+<li><a href="#line-chart">4.5 Line Chart</a></li>
+<li><a href="#bar-chart">4.6 Bar Chart</a></li>
 <li><a href="#dashboard-preparation">4.7 Dashboard Preparation</a></li>
 <li><a href="#dashboard">4.8 Dashboard</a></li>
 </ul></li>
@@ -1522,12 +1522,12 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
 </ol>
 <h1 id="alternative-design">2.0 Alternative Design</h1>
 <p>The proposed design is as follows.</p>
-<p><img src="AlternativeDesign.jpg" width="500" /></p>
+<p><img src="AlternativeDesign2.jpg" /></p>
 <h3 id="clarity-1">2.1 Clarity</h3>
 <ol type="1">
 <li>The y-axes of the line charts are synchronised across categories to improve the visualisation of the scale.</li>
-<li>Different maps are used to view different levels of data, with heatmaps to view intensity of conflicts, a pie chart map to visualise the breakdown of conflicts by area, and a proportionate symbol map to show a detailed representation of the various events that occurred.</li>
-<li>Time series can be visualised using a trellis map plot to visualise the number of conflicts that occur over time.</li>
+<li>Different maps are used to view different levels of data, with a pie chart map to visualise the breakdown of conflicts by area, and a proportionate symbol map to show a detailed representation of the various events that occurred.</li>
+<li>Time series can be visualised using a trellis map plot to visualise the number of conflicts that occur over time. Bar charts are used to view a breakdown of all events occurring in the country.</li>
 <li>The total number of events that occurred are shown as values on the dashboard in the detailed proportionate symbol map. This keeps the total events in view even as the user is deep diving into the singular events.</li>
 </ol>
 <h3 id="aesthetic">2.2 Aesthetic</h3>
@@ -1617,64 +1617,7 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
 </tr>
 </tbody>
 </table>
-<h3 id="heatmap">4.2 Heatmap</h3>
-<table>
-<colgroup>
-<col style="width: 6%" />
-<col style="width: 55%" />
-<col style="width: 37%" />
-</colgroup>
-<thead>
-<tr class="header">
-<th>No</th>
-<th>Step</th>
-<th>Action</th>
-</tr>
-</thead>
-<tbody>
-<tr class="odd">
-<td>1</td>
-<td>Create a calculated field called Full count to consider the blank events for each year and country (e.g., Malaysia in 2010).</td>
-<td><img src="Steps/Step13.png" width="500" /></td>
-</tr>
-<tr class="even">
-<td>2</td>
-<td>Drag Long Selection and Lat Selection into the columns and rows respectively.</td>
-<td><img src="Steps/Step14.png" width="500" /></td>
-</tr>
-<tr class="odd">
-<td>3</td>
-<td>Drag Count into the colour, Country into Detail, and change the mark to a density plot.</td>
-<td><img src="Steps/Step15.png" width="250" /></td>
-</tr>
-<tr class="even">
-<td>4</td>
-<td>Select the colour mark and change the colours, intensity, and opacity to suit preferences.</td>
-<td><img src="Steps/Step16.png" width="250" /></td>
-</tr>
-<tr class="odd">
-<td>5</td>
-<td>Drag the relevant parameters into the filter tab.</td>
-<td><img src="Steps/Step17.png" width="250" /></td>
-</tr>
-<tr class="even">
-<td>6</td>
-<td>Click the right arrow, select the Apply to Worksheets option, and choose the All Using This Data Source. This will apply this filter to all future worksheets.</td>
-<td><img src="Steps/Step18.png" width="500" /></td>
-</tr>
-<tr class="odd">
-<td>7</td>
-<td>Put the Display calculated field into the filter list. Select the custom value list, type in “Heatmap” and select the “+” option to add this to the list. Repeat for “All”. This will hide the visualisation when other options are selected in the “Select a view” parameter.</td>
-<td><img src="Steps/Step20.png" width="500" /></td>
-</tr>
-<tr class="even">
-<td>8</td>
-<td>The heatmap visualisation will look like this. This allows users to visualise the intensity of conflict, where dark blue represents less conflict intensity, and those that are yellow represent greater conflict intensity</td>
-<td><img src="Steps/Step21.png" width="500" /></td>
-</tr>
-</tbody>
-</table>
-<h3 id="pie-chart">4.3 Pie Chart</h3>
+<h3 id="pie-chart">4.2 Pie Chart</h3>
 <table>
 <colgroup>
 <col style="width: 6%" />
@@ -1706,7 +1649,7 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
 </tr>
 <tr class="even">
 <td>4</td>
-<td>Repeat the step for Display and use Map instead of Heatmap. This will display the visualisation only when Map or All is selected in the “Select a View” parameter.</td>
+<td>Put the Display calculated field into the filter list. Select the custom value list, type in “Map” and select the “+” option to add this to the list. Repeat for “All”. This will hide the visualisation when other options are selected in the “Select a view” parameter. This will display the visualisation only when Map or All is selected in the “Select a View” parameter.</td>
 <td><img src="Steps/Step25.png" width="500" /></td>
 </tr>
 <tr class="odd">
@@ -1721,7 +1664,7 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
 </tr>
 </tbody>
 </table>
-<h3 id="trellis-maps">4.4 Trellis Maps</h3>
+<h3 id="trellis-maps">4.3 Trellis Maps</h3>
 <table>
 <colgroup>
 <col style="width: 6%" />
@@ -1753,12 +1696,12 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
 </tr>
 <tr class="even">
 <td>4</td>
-<td>Repeat the step for the Display calculated field, this time using “Trellis” instead of “Heatmap”.</td>
+<td>Repeat the step for the Display calculated field, this time using “Trellis” instead of “Map”.</td>
 <td><img src="Steps/Step31.png" width="500" /></td>
 </tr>
 </tbody>
 </table>
-<h3 id="detailed-map">4.5 Detailed Map</h3>
+<h3 id="detailed-map">4.4 Detailed Map</h3>
 <table>
 <colgroup>
 <col style="width: 6%" />
@@ -1790,7 +1733,7 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
 </tr>
 <tr class="even">
 <td>4</td>
-<td>Repeat the step for Display and use Detailed instead of Heatmap.</td>
+<td>Repeat the step for Display and use Detailed instead of Map</td>
 <td><img src="Steps/Step35.png" width="500" /></td>
 </tr>
 <tr class="odd">
@@ -1805,7 +1748,7 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
 </tr>
 </tbody>
 </table>
-<h3 id="line-chart">4.6 Line Chart</h3>
+<h3 id="line-chart">4.5 Line Chart</h3>
 <table>
 <colgroup>
 <col style="width: 6%" />
@@ -1869,6 +1812,48 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
 <td>10</td>
 <td>The line chart will look something like this. This will be used to visualise the time series at various levels of aggregation, for All, Country, or State level, &amp; segregated into Event and Sub-event categories.</td>
 <td><img src="Steps/Step47.png" width="500" /></td>
+</tr>
+</tbody>
+</table>
+<h3 id="bar-chart">4.6 Bar Chart</h3>
+<table>
+<colgroup>
+<col style="width: 6%" />
+<col style="width: 55%" />
+<col style="width: 37%" />
+</colgroup>
+<thead>
+<tr class="header">
+<th>No</th>
+<th>Step</th>
+<th>Action</th>
+</tr>
+</thead>
+<tbody>
+<tr class="odd">
+<td>1</td>
+<td>Use view breakdown, CNT(Event Id Cnty), and Event Selection into the various marks as seen in the snapshot. Change marks to a bar chart.</td>
+<td><img src="Steps/Step56.png" width="250" /></td>
+</tr>
+<tr class="even">
+<td>2</td>
+<td>Move Country into columns, and Event Selection and CNT(Event id Cnty) into rows.</td>
+<td><img src="Steps/Step57.png" width="250" /></td>
+</tr>
+<tr class="odd">
+<td>3</td>
+<td>Add in the relevant parameters for the filter tab.</td>
+<td><img src="Steps/Step58.png" width="250" /></td>
+</tr>
+<tr class="even">
+<td>4</td>
+<td>Repeat the step for Display and use “Bar chart” instead of “Map”</td>
+<td><img src="Steps/Step60.png" width="500" /></td>
+</tr>
+<tr class="odd">
+<td>5</td>
+<td>The bar chart will look similar to this. This explains the breakdown of events in each country.</td>
+<td><img src="Steps/Step59.png" width="500" /></td>
 </tr>
 </tbody>
 </table>
